<resources>
    <string name="app_name">智慧家居</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="yes">确定</string>
    <string name="next_step">下一步</string>
    <string name="no">取消</string>
    <string name="warn">提示</string>
    <string name="account:">用户名</string>
    <string name="password:">密码</string>
    <string name="account">您的账号：</string>
    <string name="forget_password">忘记密码</string>
    <string name="switch_user">切换账号</string>
    <string name="login">登 录</string>
    <string name="add">添加</string>
    <string name="editor">编辑</string>
    <string name="no_editor">取消编辑</string>
    <string name="exit_program">再按一次退出程序</string>
    <string name="zhang_hu_mi_ma_bu_neng_wei_null">账户密码大网关ip和端口不能为空</string>
    <string name="zhang_hu_deng_lu">账户登录&#8230;</string>
    <string name="yong_hu_mi_ma_error">用户名或密码错误</string>
    <string name="account_is_not_enable">账号已被禁用，请更换账号重新登录</string>
    <string name="she_bei_geng_xin_jian_ce">设备列表更新检测&#8230;</string>
    <string name="she_bei_gong_neng_geng_xin_jian_ce">设备功能更新检测&#8230;</string>
    <string name="yong_hu_mo_shi_geng_xin_jian_ce">用户模式更新检测&#8230;</string>
    <string name="mo_shi_gong_neng_geng_xin_jian_ce">模式功能更新检测&#8230;</string>
    <string name="gong_neng_ming_xin_pei_zhi_jian_ce">功能明细配置更新检测&#8230;</string>
    <string name="geng_xin_ding_shi_list">定时任务列表更新&#8230;</string>
    <string name="geng_xin_ding_shi_cao_zuo_list">定时任务操作列表更新&#8230;</string>
    <string name="mode_group_list">模式分组列表更新&#8230;</string>
    <string name="geng_xin_gong_neng_ming_xi">更新功能明细&#8230;</string>
    <string name="she_bei_chu_shi_hua">设备初始化&#8230;</string>
    <string name="mode_combinations">模式组合</string>
    <string name="device_control">设备控制</string>
    <string name="mode_add">模式添加</string>
    <string name="mode_icon_select">选择图标</string>
    <string name="mode_amend">模式修改</string>
    <string name="start_using">启用</string>
    <string name="icon">图标</string>
    <string name="mode_name">模式名称</string>
    <string name="wait_please">请稍等&#8230;</string>
    <string name="update_tips">更新提示</string>
    <string name="update_now">立即更新</string>
    <string name="editor_success">修改成功！</string>
    <string name="sercert_querstion1">正在获取密保问题&#8230;</string>
    <string name="button_ok">确  定</string>
    <string name="go_back">返回</string>
    <string name="old_secretkey">旧密码</string>
    <string name="new_secretkey1">新密码</string>
    <string name="confirm_secretkey">确认密码</string>
    <string name="old_secret_not_null">请输入原密码</string>
    <string name="new_secret_not_null">请设置新密码</string>
    <string name="new_secret_confirm">请确认新密码</string>
    <string name="change_secretkey">修改密码</string>
    <string name="change_secretkey_title">重新设置您的账号密码</string>
    <string name="set_safe_question_title">设置您的密保问题</string>
    <string name="reset_password_success">密码重置成功</string>
    <string name="forget_password_title">找回您的账号密码</string>
    <string name="question_answer_title">请回答您的密保问题</string>
    <string name="question_not_null">请选择密保问题</string>
    <string name="question_answer_not_null">请回答密保问题</string>
    <string name="string_input_password_err">密码输入有误！</string>
    <string name="safe_question_is_null">未设置密保问题</string>
    <string name="set_safe_question">设置密保问题</string>
    <string name="et_pwd_diff">两次密码输入不一致！</string>
    <string name="secret_question">密保问题</string>
    <string name="forget_secret">找回密码</string>
    <string name="question_1">密保问题一</string>
    <string name="question_2">密保问题二</string>
    <string name="mo_shi_ming_zi_bu_neng_kong">模式名字不能为空</string>
    <string name="qing_xian_xuan_ze_she_bei">请先选择设备，再进行添加</string>
    <string name="qing_xian_da_kai_she_bei">请先打开设备，再进行设置</string>
    <string name="setting_already">已设置</string>
    <string name="remenber_key">记住密码</string>
    <string name="copy_right1">重庆金鑫智慧科技有限公司</string>
    <string name="copy_right2">（c）2010-2016 保留所有权利</string>
    <string name="yong_hu_xin_xi_geng_xin">"用户信息更新&#8230;"</string>
    <string name="bao_cun_zhong">"保存中&#8230;"</string>
    <string name="tong_bu_shu_ju">"同步数据&#8230;"</string>
    <string name="delete">"删除"</string>
    <string name="shi_fou_shan_chu">"请确认是否删除该组合模式？"</string>
    <string name="shi_fou_shan_chu_timer">"请确认是否删除该定时器？"</string>
    <string name="xi_tong_mo_ren_mo_shi_bu_neng_shan_chu">"系统默认模式不允许删除！"</string>
    <string name="qing_qiu_chu_li_zhong">"正在操作，请稍后&#8230;"</string>
    <string name="gender">性　　别</string>
    <string name="age">年　　龄</string>
    <string name="address">通讯地址</string>
    <string name="phone_no">联系电话</string>
    <string name="location_detail">地理位置</string>
    <string name="state">备　　注</string>
    <string name="personal_info">个人信息</string>
    <string name="change_key_success">修改密码成功</string>
    <string name="safe_question_error">密保问题回答错误或密码有误</string>
    <string name="safe_question_conmfir_error">密保问题验证失败</string>
    <string name="change_nickyname">昵称</string>
    <string name="safe_question_change_success">密保问题修改成功</string>
    <string name="safe_question_change">密保</string>
    <string name="safe_centre">安全中心</string>
    <string name="set_nickyname">设置您的登录昵称</string>
    <string name="set_nickyname_string_error">昵称不能为空或太短</string>
    <string name="set_nickyname_success">昵称修改成功，已可以使用新昵称登录</string>
    <string name="set_safe_question_tips">账号未设置密保，请先设置</string>
    <string name="ban_ben_geng_xin">版本更新</string>
    <string name="vein_retry_alert">提示</string>
    <string name="update">更新</string>
    <string name="action_settings">Settings</string>
    <string name="infrared_control">无线红外控制</string>
    <string name="update_db">程序数据库升级，请务必保持网络畅通，否则可能无法正常使用。</string>
    <string name="light_color">灯光颜色</string>
    <string name="light_color_setting">灯光颜色设置成功</string>
    <string name="huo_qu_she_bei_zhuang_tai">正在获取设备状态&#8230;</string>
    <string name="qing_qiu_fu_wu_chao_shi">网络连接异常，使用登录过的帐号可切换到离线模式</string>
    <string name="zhao_dao_ke_yong_wang_guan">找到可用网关</string>
    <string name="li_xian_mo_shi_qie_huan_chen_gong">已切换到离线模式</string>
    <string name="sou_suo_wang_guan_error">搜索网关超时，请重试</string>
    <string name="li_xian_mo_shi_mi_ma_error">密码验证失败，请使用上次成功登录的密码进行验证</string>
    <string name="zheng_zai_lian_jie_wang_guan">正在连接本地网关&#8230;</string>
    <string name="li_xian_cao_zuo_tips">离线模式不能进行此操作</string>
    <string name="timer_task_name">任务名称</string>
    <string name="timer_task_repeat">任务重复</string>
    <string name="timer_task_add">定时任务添加</string>
    <string name="timer_task_amend">定时任务修改</string>
    <string name="timer_task_operation_not_null">请选择定时操作</string>
    <string name="device_control_item_et_hint">请编辑名称</string>
    <string name="default_img_desc">default image desc</string>
    <string name="comm_loading_send_cmd_text">正在发送命令</string>
    <string name="home_common_info_temperature">温度：</string>
    <string name="home_common_info_lights">灯光</string>
    <string name="home_common_info_door">门禁</string>
    <string name="home_common_info_scan">扫一扫</string>
    <string name="home_common_info_security">安防</string>
    <string name="home_common_info_camera">监控</string>
    <string name="home_common_info_message">消息</string>
    <string name="home_door_get">获取门禁状态</string>
    <string name="home_door_open">开启门禁</string>
    <string name="home_door_close">关闭门禁</string>
    <string name="control_dialog_cancel">取消</string>
    <string name="home_security_open">开启安防</string>
    <string name="home_security_close">关闭安防</string>
    <string name="music">音乐播放</string>
    <string name="music_list">播放列表</string>
    <string name="test_string">测试字符串</string>
    <string name="test_time">05:55</string>
    <string name="test_number">1.</string>
    <string name="music_mute">静音</string>
    <string name="music_unmute">取消静音</string>
    <string name="music_song_list">歌曲列表</string>
    <string name="music_state">查询状态</string>
    <string name="music_next">下一曲</string>
    <string name="music_pre">上一曲</string>
    <string name="music_play">播放</string>
    <string name="music_pause">暂停</string>
    <string name="music_choose_input">输入源</string>
    <string name="music_chose_speaker">扬声器</string>
    <string name="music_wake_word">唤醒词</string>
    <string name="music_control_speaker">控制操作</string>
    <string name="music_choose_amplifier">功放</string>
    <string name="music_sound_add">音量 +</string>
    <string name="music_sound_sub">音量 -</string>
    <string name="music_collect">收藏</string>
    <string name="music_delete">删除</string>
    <string name="music_chose_speaker_title">选择扬声器</string>
    <string name="music_load_more">点击加载更多&#8230;</string>
    <string name="music_load_finish">加载完成</string>
    <string name="music_load_success">没有更多歌曲了</string>
    <string name="music_sync">同步歌曲列表</string>
    <string name="music_warn_input">使用前请设置输入源</string>
    <string name="music_warn_speaker">使用前请设置扬声器</string>
    <string name="control_voice_watch">打开智能语音</string>
    <string name="control_gesture_open">打开手势识别</string>
    <string name="control_gesture_close">关闭手势识别</string>
    <string name="control_voice_hint">请输入你要说的话&#8230;</string>
    <string name="control_voice_send">发送</string>
    <string name="control_voice_cancel">取消</string>
    <string name="download_camera_app">下载摄像头软件</string>
    <string name="download_camera_app_desc">摄像头的远程监控和控制需要其他组件支持，点击确定下载</string>
    <string name="setting_catergroy_music">功放设置</string>
    <string name="setting_music_input">功放输入源</string>
    <string name="setting_music_speaker">功放扬声器</string>
    <string name="setting_wake_word">查看唤醒词</string>
    <string name="setting_music_volume">音量</string>
    <string name="setting_music_mute">静音</string>
    <string name="setting_music_pattern">模式</string>
    <string name="setting_music_input_usb">USB</string>
    <string name="set_nickyname_to_login">设置昵称可作为登录用户名</string>
    <string name="li_xian_cao_zuo_error">离线模式不能进行此操作</string>
    <string name="setting_catergory_offline">离线设置</string>
    <string name="setting_catergory_voice">语音控制</string>
    <string name="setting_catergory_user">同步</string>
    <string name="setting_catergory_warning">报警设备在家模式免打扰设置</string>
    <string name="setting_offline_on">打开离线切换</string>
    <string name="setting_voice_send_on">语音控制自动发送</string>
    <string name="setting_apply_subuser">同步到子账号</string>
    <string name="setting_yes">是</string>
    <string name="setting_no">否</string>
    <string name="disable">禁用</string>
    <string name="setting_catergory_password_pattern">九宫格</string>
    <string name="setting_catergory_vein">静脉纹</string>
    <string name="setting_password_pattern">九宫格</string>
    <string name="tv_nickyname">正在使用的昵称：</string>
    <string name="music_setting_inputs">选择输入源</string>
    <string name="action_more">更多</string>
    <string name="action_about">更多</string>
    <string name="timer_title">定时控制</string>
    <string name="task_name_not_null">任务名不能为空</string>
    <string name="task_time_not_null">请选择任务触发周期或时间</string>
    <string name="nine_string_one">绘制长度至少要连接4个点，请重新绘制!</string>
    <string name="nine_string_two">请再次绘制一次加密图案</string>
    <string name="nine_string_three">设置成功!</string>
    <string name="nine_string_four">两次绘制的图案不一致，请重新绘制!</string>
    <string name="nine_string_five">连续错误5次，请重新登录!</string>
    <string name="control_on">开机</string>
    <string name="control_off">关机</string>
    <string name="sound_box_control">音箱控制</string>
    <string name="title_remote_match">智能对码</string>
    <string name="title_remote_learn">智能学习</string>
    <string name="home_common_info_doorbell">门铃</string>
    <string name="home_common_info_kit">猫眼</string>
    <string name="cloud_music_song_list">云音乐</string>
    <string name="local_music_song_list">本地音乐</string>
    <string name="voice_play_by_order">全部播放</string>
    <string name="voice_multiple_choice">多选播放</string>
    <string name="voice_random_play">随机播放</string>
    <string name="pluto_status">状态</string>
</resources>