<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:alpha="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/main_button"
        android:icon="@drawable/ico_set_button"
        alpha:showAsAction="always"
        android:title="@string/action_more">
        <menu>
            <item
                android:id="@+id/action_match"
                android:icon="@drawable/ico_remote_match"
                alpha:showAsAction="ifRoom"
                android:title="@string/title_remote_match"/>
            <item
                android:id="@+id/action_learn"
                android:icon="@drawable/ico_remote_learn"
                alpha:showAsAction="ifRoom"
                android:title="@string/title_remote_learn"/>

        </menu>
    </item>

</menu>