<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:background="@drawable/ico_voice_box"
            android:contentDescription="@string/sound_box_control"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_45"
            android:layout_marginRight="@dimen/dimen_45"
            android:layout_marginTop="@dimen/dimen_60" >

            <Button
                android:id="@+id/btn_pluto_sound_box_turn_on"
                android:layout_width="@dimen/dimen_55"
                android:layout_height="@dimen/dimen_55"
                android:background="@drawable/pluto_sound_box_btn"
                android:text="@string/control_on"
                android:textColor="@color/btn_text_color"
                android:textSize="@dimen/text_14" />

            <Button
                android:id="@+id/btn_pluto_sound_box_turn_off"
                android:layout_width="@dimen/dimen_55"
                android:layout_height="@dimen/dimen_55"
                android:layout_centerHorizontal="true"
                android:background="@drawable/pluto_sound_box_btn"
                android:text="@string/control_off"
                android:textColor="@color/btn_text_color"
                android:textSize="@dimen/text_14" />

            <Button
                android:id="@+id/btn_pluto_sound_box_query"
                android:layout_width="@dimen/dimen_55"
                android:layout_height="@dimen/dimen_55"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn"
                android:text="@string/pluto_status"
                android:textColor="@color/btn_text_color"
                android:textSize="@dimen/text_14" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_25"
            android:layout_marginRight="@dimen/dimen_25"
            android:layout_marginTop="@dimen/dimen_40"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_pluto_sound_box_unmute"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_22"
                android:layout_weight="1"
                android:contentDescription="@string/music_unmute"
                android:src="@drawable/pluto_sound_box_voice_turn_on" />

            <ImageView
                android:id="@+id/iv_pluto_sound_box_mute"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_22"
                android:layout_weight="1"
                android:contentDescription="@string/music_mute"
                android:src="@drawable/pluto_sound_box_voice_turn_off" />

            <ImageView
                android:id="@+id/iv_pluto_sound_box_volume_sub"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_22"
                android:layout_weight="1"
                android:contentDescription="@string/music_sound_sub"
                android:src="@drawable/pluto_sound_box_voice_sub" />

            <ImageView
                android:id="@+id/iv_pluto_sound_box_volume_add"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_22"
                android:layout_weight="1"
                android:contentDescription="@string/music_sound_add"
                android:src="@drawable/pluto_sound_box_voice_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_pluto_sound_box_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50"
            android:gravity="center"
            android:textColor="@color/feedback_item_title" />
    </LinearLayout>

</LinearLayout>