<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/music_list_item_menu_play"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:text="@string/music_play"
        android:textSize="@dimen/text_size_medium"
        style="@style/default_music_textview"/>
    
    <TextView 
        android:id="@+id/music_list_item_menu_collect"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light"
        android:text="@string/music_collect"
        android:textSize="@dimen/text_size_medium"
        style="@style/default_music_textview"/>
    
    <TextView 
        android:id="@+id/music_list_item_menu_delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/delete"
        android:background="@android:color/background_light"
        android:textSize="@dimen/text_size_medium"
        style="@style/default_music_textview"/>

</LinearLayout>
