<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView 
        android:id="@+id/speaker_choose_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/music_chose_speaker_title"/>
    
     <Button 
         android:id="@+id/speaker_choose_positiveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_vertical"
         android:background="@drawable/add_state"
         android:textColor="@color/white"
         android:text="@string/yes"/>
        
    <Button 
         android:id="@+id/speaker_choose_negativeButton"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         style="@style/button_style"
         android:visibility="gone"
         android:layout_margin="1dp"
         android:text="@string/no"/>
    
    <ListView 
        android:id="@+id/speaker_choose_list"
        android:layout_above="@id/speaker_choose_positiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</RelativeLayout>